[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-automation"
version = "1.0.0"
description = "Framework built on top of Selenium framework for easy setup and config"
readme = "README.md"
authors = [{ name="The Bored Genius", email="th3b0redgenius@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["automation", "web", "framework"]
dependencies = [
    "selenium == 4.7.2"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/theboredgenius/web-automation"